# cscript-voice

./: .gitignore  AGENTS.md  README.md  config.yaml  example_script.txt  install.sh  main.py  pyproject.toml
analyzer/: __init__.py  base.py  claude.py  ollama.py  rule_based.py  transformers.py
audio/: assembler.py
parser/: script_parser.py
tts/: __init__.py  base.py  cosyvoice_tts.py  lvoice_tts.py
voice/: inferrer.py  manager.py  profiles.yaml
voice/assets/: README.md
