[project]
name = "cspeak"
version = "0.1.0"
description = "Chinese screenplay reader with emotion-aware voice synthesis"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "pydub>=0.25",
    "audioop-lts>=0.2.1",  # audioop was removed in Python 3.13; pydub needs it
    "typer>=0.12",
    "rich>=13.0",
    "shellingham>=1.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Local TTS via CosyVoice2.
# CosyVoice itself is NOT on PyPI — install it via .pth files (see README).
# This group covers CosyVoice's own runtime deps plus our TTS wrapper deps.
tts = [
    # our code
    "torch>=2.0",
    "torchaudio>=2.0",
    "torchcodec>=0.12",         # torchaudio 2.7+ uses TorchCodec as its backend
    "soundfile>=0.12",
    # CosyVoice2 runtime deps (not pulled automatically since CosyVoice is .pth-installed)
    "HyperPyYAML>=1.2",
    "inflect>=7.0",
    "onnxruntime>=1.18; sys_platform != 'linux'",
    "openai-whisper",
    "conformer>=0.3",
    "diffusers>=0.29",
    "hydra-core>=1.3",
    "librosa>=0.10",
    "lightning>=2.2",
    "omegaconf>=2.3",
    "pyworld>=0.3.4",
    "gdown>=5.0",
    "matplotlib>=3.7",
    "protobuf>=4.25",
    "pyarrow>=18.0",
    "tensorboard>=2.14",
    "grpcio>=1.57",
    "grpcio-tools>=1.57",
    "networkx>=3.1",
    "wget>=3.2",
    "x-transformers>=2.0",
    "wetext>=0.0",
    "modelscope>=1.9",
    # 4.51.3: last known-good version with CosyVoice2; newer versions cause Qwen2
    # to generate excessively long speech tokens, producing ~3x longer audio
    "transformers==4.51.3",
]
# Emotion analysis via local transformers model (~1.1 GB download on first run)
transformers = [
    "transformers>=4.40,<5",
    "torch>=2.0",
]
# Emotion analysis via Claude API
claude = [
    "anthropic>=0.40",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.15"]
