[project]
name = "cspeak"
version = "0.1.0"
description = "Chinese screenplay reader with emotion-aware voice synthesis"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "pydub>=0.25",
    "audioop-lts>=0.2.1",  # audioop was removed in Python 3.13; pydub needs it
    "typer>=0.12",
    "rich>=13.0",
    "shellingham>=1.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Emotion analysis via local transformers model (~1.1 GB download on first run)
transformers = [
    "transformers>=4.40,<5",
    "torch>=2.0",
]
# Emotion analysis via Claude API
claude = [
    "anthropic>=0.40",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.15"]
